Solved visual bug on mobile view

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -414,3 +414,6 @@ footer p{
         text-shadow: 0 2px 50px #45b8e178;
     }
 }
+#root{
+    flex-wrap: wrap;
+}
